Fixed Floating Warning windows. App is completed. optimization and polishing left.